# serpapi_mcp_server

./: mcp_server.py  pyproject.toml  requirements.txt
